#########################################################
#														#
#		CHANGELOG PLUGIN LOJAS							#
#														#
#########################################################

/---------------------------------------------------------/
1.1
04/10/2012
	Alterada ordenação de lojas. Agora lista primeiro as lojas de Curitiba
	separando as do centro com as dos demais bairros

/---------------------------------------------------------/
1.1
01/10/2012
	Alteradas variáveis, nomes de arquivos e pastas
	para o padrão do wordpress minusculas com hifen como separador

/---------------------------------------------------------/
1.0
27/09/2012
	Criada a primeira versão do plugin