@@ -1,11 +1,0 @@
-<?php
- include_once 'coreLojas.php';
-/**
- * 
- */
- 
- function lojasCentro()
- {
- 	
- 	return $lojasCentro;
- }
