@@ -1,9 +1,13 @@
 <?php
 /**
  * Template Name: Lojas
+ * Description: Aqui será montado o layout para apresentação das lojas
+ * Sempre será chamada a principal cidade da região metropolitana
+ * e esta terá distinção de lojas do centro e dos bairros, nas demais cidade
+ * as lojas serão agrupadas como um todo
  */
 
-include_once 'wp-content/plugins/lojas/core/coreLojas.php';
+include_once 'wp-content/plugins/lojas/core/lojas-core.php';
 $Lojas = new Lojas();
 $dadosCuritiba = $Lojas->obterCidades('Curitiba');
 $dadosCidades = $Lojas->obterCidades('', 'Curitiba');
@@ -17,7 +21,9 @@ get_header(); ?>
     	
     	<div class="conteudo clearfix">
        	<?php
-       	// Buscando bairros de Curitiba
+       	
+       	// listando lojas do Centro de Curitiba
+       	// Aqui pode ser definida uma cidade qualquer
        	if($dadosCuritiba)
        	{
            	foreach($dadosCuritiba as $curitiba)
@@ -26,7 +32,6 @@ get_header(); ?>
                   	<h2><?php echo ucfirst($curitiba->nome); ?></h2> 
                   	<div class="lojas-cidade" >
                     <?php
-                    	// listando lojas do Centro 
                         $dadosLojas = $Lojas->obterLojasPorBairro('Centro');
                       
                         if($dadosLojas)
@@ -46,51 +51,53 @@ get_header(); ?>
                                    		<p class="endereco"><?php echo $lojas->endereco; ?></p>
                                    		<p class="telefone"><?php echo $lojas->telefone; ?></p>
                        				</div>
-                            <?php 
-                            }
+                     <?php  }
                         }?>
                   					</div>
               		</div>
+              		
            <?php 
            }
-									
-		   foreach($dadosCuritiba as $bairrosCuritiba)
-           {
-           		 // Lisatando lojas dos bairros com excessão do Centro
-           	     $dadosLojas = $Lojas->obterLojasPorBairro("","'Centro' and cidade='Curitiba'");
-                  
-	                        if($dadosLojas)
-	                        {
-	                            foreach($dadosLojas as $lojas)
-	                            {?>
-	                            	<div class="conteudo-endereco clearfix">
-   
-                  					<div class="lojas-cidade" >
-          							<?php
-		                            	if($lojas->farmacia_popular == 'sim')
-		                                {?>
-		                                    <div class="box-endereco ativo">
-		                                <?php
-		                                }
-		                                else 
-		                                {?>
-		                                   	<div class="box-endereco">
-		                                <?php 
-		                                }?>
-			                                   <h3><?php echo $lojas->nome; ?></h3>
-			                                   <p class="endereco"><?php echo $lojas->endereco; ?></p>
-			                                   <p class="telefone"><?php echo $lojas->telefone; ?></p>
-											</div>
-	                      <?php } 
-	                        
-							}?>
-                  						</div>
-              						</div>
-             				 	</div>
-           	<?php 
-           	}							
        	}
 
+        // buscando demais bairros de Curitiba, definind que o Centro não se encaixe na pesquisa
+        $dadosBairros = $Lojas->obterBairros('Curitiba','Centro');
+        
+        if($dadosBairros)
+        {
+            foreach($dadosBairros as $bairro)
+            {?>
+            <div class="conteudo-endereco clearfix">
+                <h3><?php echo ucfirst($bairro->nome); ?>   </h3> 
+                <div class="lojas-cidade" >
+                    
+                <?php
+                    
+                    $dadosLojasBairros = $Lojas->obterLojasPorBairro($bairro->nome,'Curitiba');
+                    
+                    foreach($dadosLojasBairros as $dadosLojasBairros)
+                    {
+                       if($dadosLojasBairros->farmacia_popular == 'sim')
+                        {?>
+                           <div class="box-endereco ativo">
+                           <?php
+                        }
+                        else 
+                        {?>
+                            <div class="box-endereco">
+                        <?php 
+                        }?>
+                                <p class="endereco"><?php echo $dadosLojasBairros->endereco; ?></p>
+                                <p class="telefone"><?php echo $dadosLojasBairros->telefone; ?></p>
+                            </div>
+              <?php } ?>
+                            </div>
+                </div>
+            <?php 
+            }
+        }
+
+        // buscando por demais cidades, estas cidades não terão distinção entre lojas do centro e de bairros
 		if($dadosCidades)
        	{
            	foreach($dadosCidades as $cidade)
@@ -98,7 +105,9 @@ get_header(); ?>
 			<div class="conteudo-endereco clearfix">
 				<h2><?php echo ucfirst($cidade->nome); ?>   </h2> 
 	          	<div class="lojas-cidade" >
-	            <?php 
+	          	    
+	            <?php
+	             
 					$dadosLojas = $Lojas->obterLojasPorCidade($cidade->nome);
 	              
                     	if($dadosLojas)
@@ -120,8 +129,7 @@ get_header(); ?>
 		                               	<p class="endereco"><?php echo $lojas->endereco; ?></p>
 		                               	<p class="telefone"><?php echo $lojas->telefone; ?></p>
                            			</div>
-                        	<?php 
-                        	}
+                       <?php }
                     	}?>
 	          					</div>
 	      		</div>
